Random pokemon weergeven op de kaart rondom de speler

--- a/src/app/catch-pokemon/catch-pokemon.page.html
+++ b/src/app/catch-pokemon/catch-pokemon.page.html
@@ -1,6 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>CatchPokemon</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+
+    <ion-title>{{ pokemon.name | titlecase }} vangen</ion-title>
   </ion-toolbar>
 </ion-header>
 
