--- a/src/app/pokedex/pokedex.page.html
+++ b/src/app/pokedex/pokedex.page.html
@@ -5,14 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-list lines="full">
-    <ion-item *ngFor="let pokemon of pokemons" (click)="onDetails(pokemon.id)">
-      <ion-avatar slot="start">
-        <ion-img [src]="getPokemonItem(pokemon.id)"></ion-img>
-      </ion-avatar>
-      <ion-label>{{ pokemon.name | titlecase }}</ion-label>
-    </ion-item>
-  </ion-list>
+  <app-pokemon-list [pokemons]="pokemons" (click)="onDetails($event.id)"></app-pokemon-list>
 
   <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
     <ion-infinite-scroll-content
