--- a/src/app/my-pokemon/my-pokemon.page.html
+++ b/src/app/my-pokemon/my-pokemon.page.html
@@ -5,11 +5,5 @@
 </ion-header>
 
 <ion-content *ngIf="myPokemon">
-  <ion-list lines="full">
-    <ion-item *ngFor="let pokemon of myPokemon">
-      <ion-label>
-        {{ pokemon.name | titlecase }}
-      </ion-label>
-    </ion-item>
-  </ion-list>
+  <app-pokemon-list [pokemons]="myPokemon" (pokemonClick)="showDetails($event.id)"></app-pokemon-list>
 </ion-content>
