--- a/src/app/common-components/pokemon-list/pokemon-list.component.html
+++ b/src/app/common-components/pokemon-list/pokemon-list.component.html
@@ -1,8 +1,17 @@
 <ion-list lines="full" *ngIf="pokemons">
-  <ion-item *ngFor="let pokemon of pokemons" (click)="onClick(pokemon)">
-    <ion-avatar slot="start">
-      <ion-img [src]="getPokemonImage(pokemon)"></ion-img>
-    </ion-avatar>
-    <ion-label>{{ pokemon.name | titlecase }}</ion-label>
-  </ion-item>
+  <ion-reorder-group [disabled]="!reorder" (ionItemReorder)="reorderPokemon($event)">
+    <ion-item-sliding *ngFor="let pokemon of pokemons">
+      <ion-item (click)="onClick(pokemon)">
+        <ion-avatar slot="start">
+          <ion-img [src]="getPokemonImage(pokemon)"></ion-img>
+        </ion-avatar>
+        <ion-label>{{ pokemon.name | titlecase }}</ion-label>
+        <ion-reorder slot="end"></ion-reorder>
+      </ion-item>
+
+      <ion-item-options side="end" *ngIf="deletable">
+        <ion-item-option color="danger" (click)="onDelete(pokemon)">Verwijderen</ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-reorder-group>
 </ion-list>
