--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-button color="danger" expand="block" (click)="resetMyPokemon()">Reset mijn pokemon</ion-button>
 </ion-content>
